# llama-cpp-rs

./: Cargo.toml
examples/: usage.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/mtmd/: Cargo.toml
examples/mtmd/src/: mtmd.rs
examples/reranker/: Cargo.toml
examples/reranker/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: context.rs  lib.rs  llama_backend.rs  llama_batch.rs  log.rs  model.rs  mtmd.rs  sampling.rs  timing.rs  token.rs  token_type.rs
llama-cpp-2/src/context/: kv_cache.rs  params.rs  session.rs
llama-cpp-2/src/grammar/: tests.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-2/src/model/params/: kv_overrides.rs
llama-cpp-2/src/token/: data.rs  data_array.rs  logit_bias.rs
llama-cpp-sys-2/: Cargo.toml
