[package]
name = "embeddings"
version = "0.1.123"
edition = "2021"
publish = false

[dependencies]
fellhorn-llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.69" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["fellhorn-llama-cpp-2/cuda"]
metal = ["fellhorn-llama-cpp-2/metal"]
native = ["fellhorn-llama-cpp-2/native"]
vulkan = ["fellhorn-llama-cpp-2/vulkan"]

[lints]
workspace = true
