[package]
name = "mtmd"
version = "0.1.86"
edition = "2021"
publish = false

[dependencies]
fellhorn-llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.86", features = ["mtmd"] }
clap = { workspace = true, features = ["derive"] }

[features]
cuda = ["fellhorn-llama-cpp-2/cuda"]
metal = ["fellhorn-llama-cpp-2/metal"]
native = ["fellhorn-llama-cpp-2/native"]
vulkan = ["fellhorn-llama-cpp-2/vulkan"]

[lints]
workspace = true

[[example]]
name = "mtmd"
path = "src/mtmd.rs"
