[package]
name = "reranker"
version = "0.1.86"
edition = "2021"
publish = false

[dependencies]
fellhorn-llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.86" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }

[features]
cuda = ["fellhorn-llama-cpp-2/cuda"]
metal = ["fellhorn-llama-cpp-2/metal"]
native = ["fellhorn-llama-cpp-2/native"]
vulkan = ["fellhorn-llama-cpp-2/vulkan"]

[lints]
workspace = true
